tried to fix scrollbar issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,6 +87,11 @@ video {
     vertical-align: baseline
 }
 
+body { 
+    height: 100%; 
+    overflow-y: scroll;
+}
+
 a {
     text-decoration: none
 }
